media/roms/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: roms
  namespace: media
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: roms
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
      - name: roms
        persistentVolumeClaim:
          claimName: roms
      - name: config
        configMap:
          name:
            roms
      containers:
      - name: nginx
        image: nginx:1.15.8-alpine
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: roms
          mountPath: /roms
          readOnly: true
        ports:
        - containerPort: 80
          name: roms
