media/roms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roms
  namespace: media
spec:
  selector:
    app: roms
  ports:
  - name: roms
    port: 80
  clusterIP: 10.103.184.41
