media/roms/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: roms
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: roms
  ingress:
  - ports:
    - port: 80
    from: []
    # - namespaceSelector:
    #     matchLabels:
    #       name: ingress-nginx
